2013-09-16  Karl Berry  <karl@tug.org>

	* writet1.c: formatting tweaks.

2013-08-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c (t1_subset_ascii_part): Remove UniqueID.
	Report from Christian Zietz (czietz/gmx/net),
	tex-k 01 Sep 2013 11:25:47 and previous.

2013-08-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bbox.c: Fix a bug in bbdopage() to obtain correct BoundingBox in
	vertical mode of pTeX.

2013-05-30  Karl Berry  <karl@tug.org>
	
	* version 5.993 for TL'13.

2013-04-07  Karl Berry  <karl@tug.org>

	* resident.c (getdefaults) <m>: if <= 0, set to INT_MAX.
	Bug report from Stepan Orevkov and Bruno Delprat, as part
	of their Mayan TeX system (info on which:
	http://tug.org/TUGboat/tb33-3/tb105delprat.pdf).
	
        It seems there is a bug related to Dvips' section splitting and
        partial font downloading/font reuse, such that only the
        characters from the first section are available through the
        entire output.  I wasn't up for dealing with that; as a
        workaround, the above maximizes Dvips' memory available, so no
        splitting is done.
         
2013-04-05  Karl Berry  <karl@tug.org>

	* configure.ac,
	* dvips.texi,
	* dvips.h,
	* afm2tfm.2c: 5.993 to prepare for TL'13 pretest.

2013-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* same-name.test: New test with oname == iname.
	* Makefile.am: Add the new test.

2013-03-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvips.c: Check if oname != iname.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (prologdir): Change texmf => texmf-dist.

2013-01-21  Karl Berry  <karl@tug.org>

	* test-dvips: rename from dvips.test, to avoid new Automake 1.13
	make check failure, since it can't create dvips.log in the
	event that dvips.log already exists (from running dvips.texi).
	Even though one is in the srcdir and one in the builddir ...
	Use test-dvips rather than dvips-test just to help filename completion.
	* Makefile.am (TESTS): rename.
