@@ -20,6 +20,14 @@
 #include <kpathsea/c-pathch.h>
 #include <kpathsea/variable.h>
 
+#ifdef WIN32
+#undef fopen
+#undef popen
+#define fopen(file, fmode)  fsyscp_fopen(file, fmode)
+#define popen(pcmd, pmode)  fsyscp_popen(pcmd, pmode)
+#define pclose(pstream) _pclose(pstream)
+#endif
+
 #ifndef GUNZIP
 #define GUNZIP          "gzip -d"
 #endif
