@@ -1,3 +1,10 @@
+2014-01-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>
+
+	* dvips.c, resident.c: Allow multibyte string with 0x5c
+	in CP932-like system. (Windows only)
+	* dvips.c, output.c, search.c: Allow Unicode file names.
+	(Windows only)
+
 2013-09-16  Karl Berry  <karl@tug.org>
 
 	* writet1.c: formatting tweaks.
